--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
           <title>My Website Title</title>
      </head>
      <body>
-          Hello World
+         <h>Hello World</h>
+         <p>This is test to update in git</p>
      </body>
 </html>
